<resources>
    <string name="general_mdash" translatable="false">&#8212;</string>
    <string name="general_unknown">Unknown</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_retry">Retry</string>
    <string name="action_resolve">Resolve</string>
    <string name="dialog_text_hint">Response</string>
    <string name="config_category_general">General</string>
    <string name="config_general_user_name_title">User name</string>
    <string name="config_general_group_name_title">Group</string>
    <string name="config_general_permission_title">Permission</string>
    <string name="config_general_permission_text_granted">Granted</string>
    <string name="config_general_permission_text_denied">Denied</string>
    <string name="config_general_battery_optimization_ignore_title">Battery Optimization</string>
    <string name="config_general_battery_optimization_ignore_text_ignored">Ignored</string>
    <string name="config_general_battery_optimization_ignore_text_not_ignored">Not ignored</string>
    <string name="config_general_data_size_title">Data Size on Disk</string>
    <string name="config_general_data_size_dialog">Do you want to really remove data?</string>
    <string name="config_category_sync">Sync</string>
    <string name="config_sync_status_title">Last Sync Time</string>
    <string name="config_sync_status_text_normal">%1s (%2s)</string>
    <string name="config_sync_status_text_none">Not yet</string>
    <string name="config_sync_network_title">Network Type</string>
    <string name="config_sync_network_text_wifi">Sync when only WiFi is available</string>
    <string name="config_sync_network_text_any">Sync when any network is available</string>
    <string name="config_sync_network_option_wifi">WiFi only</string>
    <string name="config_sync_network_option_any">Any network</string>
    <string name="config_sync_auto_sync_title">Auto-sync</string>
    <string name="config_sync_auto_sync_text_manual">Manually sync</string>
    <string name="config_sync_auto_sync_text_auto">Periodically sync every hour</string>
    <string name="config_sync_auto_sync_option_manual">Manual</string>
    <string name="config_sync_auto_sync_option_auto">Automatic</string>
    <string name="config_category_collector">Collector</string>
    <string name="config_collector_status_text_off">Off</string>
    <string name="config_collector_status_text_on">On</string>
    <string name="config_collector_status_text_error">Error</string>
    <string name="config_category_others">Others</string>
    <string name="config_others_setting_title">Setting</string>
    <string name="config_others_setting_text">Open a setting.</string>
    <string name="config_others_ntf_management_title">Notification Management</string>
    <string name="config_others_ntf_management_text">Open a setting for notifications.</string>
    <string name="config_others_sign_out_title">Sign Out</string>
    <string name="config_others_version_title">Version</string>
    <string name="config_others_sign_out_text">Stop collecting data and sign out.</string>
    <string name="config_others_sign_out_dialog">Do you want to really sign-out?</string>
    <string name="sub_config_category_collector_general">General</string>
    <string name="sub_config_collector_general_status_title">Status</string>
    <string name="sub_config_collector_general_status_text_on">Turned-on at %1s (%2s)</string>
    <string name="sub_config_collector_general_status_text_off">Off</string>
    <string name="sub_config_collector_general_status_text_error">Error occurs: %1s</string>
    <string name="sub_config_collector_general_status_dialog_on">On</string>
    <string name="sub_config_collector_general_status_dialog_off">Off</string>
    <string name="sub_config_collector_general_availability_title">Availability</string>
    <string name="sub_config_collector_general_availability_text_available">Available</string>
    <string name="sub_config_collector_general_availability_text_unavailable">Unavailable</string>
    <string name="sub_config_collector_general_permission_title">Permission</string>
    <string name="sub_config_collector_general_permission_text_granted">Granted</string>
    <string name="sub_config_collector_general_permission_text_denied">Denied</string>
    <string name="sub_config_category_collector_data">Data</string>
    <string name="sub_config_collector_data_last_written_time_title">Last Written Time</string>
    <string name="sub_config_collector_data_last_written_time_text_written">%1s (%2s)</string>
    <string name="sub_config_collector_data_last_written_time_text_none">Not yet written.</string>
    <string name="sub_config_collector_data_records_collected_title">Amount of Data Collected</string>
    <string name="sub_config_collector_data_records_collected_text">%1s records</string>
    <string name="sub_config_collector_data_records_uploaded_title">Amount of Data Uploaded</string>
    <string name="sub_config_collector_data_records_uploaded_text">%1s records</string>
    <string name="sub_config_category_collector_others">Others</string>
    <string name="survey_hint_for_others">Others</string>
    <string name="survey_hint_for_text">Response</string>
    <string name="survey_hint_for_dropdown">Unselected</string>
    <string name="survey_msg_no_records">No surveys in %1s.</string>
    <string name="survey_msg_error_occurs">Error occurs in loading data from %1s.</string>
    <string name="survey_msg_failed_load_response">Failed to load response.</string>
    <string name="survey_msg_answer_required">Some questions are not answered.</string>
    <string name="survey_msg_response_timeout">Cannot submit answers due to timeout.</string>
    <string name="survey_msg_already_answered">Cannot edit response for a survey already answered.</string>
    <string name="main_msg_back_twice_exit">Press back again to exit.</string>
    <string name="menu_bottom_survey_list">Surveys</string>
    <string name="menu_bottom_config">Config</string>
    <string name="menu_drawer_survey_all_list">All Surveys</string>
    <string name="menu_drawer_survey_unanswered_list">Unanswered Surveys</string>
    <string name="menu_drawer_survey_answered_list">Answered Surveys</string>
    <string name="menu_drawer_survey_expired_list">Expired Surveys</string>
    <string name="menu_toolbar_undo">Undo</string>
    <string name="menu_toolbar_save">Save</string>
    <string name="title_survey_list">All Surveys</string>
    <string name="title_survey_unanswered_list">Unanswered Surveys</string>
    <string name="title_survey_answered_list">Answered Surveys</string>
    <string name="title_survey_expired_list">Expired Surveys</string>
    <string name="title_survey_response">Survey Response</string>
    <string name="title_config">Config</string>
    <string name="ntf_channel_survey">Survey</string>
    <string name="ntf_channel_foreground">Foreground</string>
    <string name="ntf_channel_sync">Sync</string>
    <string name="ntf_channel_error">Error</string>
    <string name="ntf_foreground_title">ABC Logger is operating&#8230;</string>
    <string name="ntf_foreground_text">You have provided %1s records in total.</string>
    <string name="ntf_sync_title">Sync</string>
    <string name="ntf_sync_text_initialize">Preparing for sync&#8230;</string>
    <string name="ntf_sync_text_progress">%1s / %2s records uploaded&#8230;</string>
    <string name="ntf_sync_text_complete">Sync complete</string>
    <string name="ntf_sync_text_error">Sync failed due to %1s</string>
    <string name="ntf_sync_action_cancel">Cancel</string>
    <string name="ntf_error_title">Error occurs</string>
    <string name="ntf_error_text_precondition_error">Some precondition is not granted; Check configurations.</string>
    <string name="collector_physical_activity_name">Physical Activity</string>
    <string name="collector_physical_activity_desc">Histories of physical activities</string>
    <string name="collector_physical_activity_transition_name">Physical Activity Transition</string>
    <string name="collector_physical_activity_transition_desc">Transitions btw. consecutive physical activities</string>
    <string name="collector_app_usage_name">App Usage</string>
    <string name="collector_app_usage_desc">Histories of app usage.</string>
    <string name="collector_battery_name">Battery</string>
    <string name="collector_battery_desc">Status of battery.</string>
    <string name="collector_bluetooth_name">Bluetooth</string>
    <string name="collector_bluetooth_desc">Info of nearby Bluetooth devices</string>
    <string name="collector_bluetooth_info_ble">Bluetooth Low-Energy</string>
    <string name="collector_bluetooth_info_ble_supported">Supported</string>
    <string name="collector_bluetooth_info_ble_none">None</string>
    <string name="collector_call_log_name">Call Log</string>
    <string name="collector_call_log_desc">Histories of sending/incoming calls</string>
    <string name="collector_traffic_name">Data Traffic</string>
    <string name="collector_traffic_desc">Amount of data usage</string>
    <string name="collector_device_event_name">Device Event</string>
    <string name="collector_device_event_desc">Typical events on the smartphone</string>
    <string name="collector_installed_app_name">Installed App</string>
    <string name="collector_installed_app_desc">Info of apps installed on the smartphone.</string>
    <string name="collector_key_log_name">Typing Speed</string>
    <string name="collector_key_log_desc">Speed and distance btw. soft-keyboard touches.</string>
    <string name="collector_key_log_info_keyboard_type">Keyboard Type</string>
    <string name="collector_location_name">Location</string>
    <string name="collector_location_desc">Histories of location visits</string>
    <string name="collector_media_name">Photos/Videos</string>
    <string name="collector_media_desc">Amount of photos/videos taken</string>
    <string name="collector_media_info_internal_photo_written">Internal photo</string>
    <string name="collector_media_info_external_photo_written">External photo</string>
    <string name="collector_media_info_internal_video_written">Internal video</string>
    <string name="collector_media_info_external_video_written">External video</string>
    <string name="collector_message_name">Message</string>
    <string name="collector_message_desc">Histories of sending/incoming SMS/MMS</string>
    <string name="collector_message_info_sms_written">SMS</string>
    <string name="collector_message_info_mms_written">MMS</string>
    <string name="collector_notification_name">Notification</string>
    <string name="collector_notification_desc">Histories of notifications received</string>
    <string name="collector_fitness_name">Fitness</string>
    <string name="collector_fitness_desc">Activity stats with Google Fitness</string>
    <string name="collector_fitness_info_step_count_written">Step counts</string>
    <string name="collector_fitness_info_stat_activity_written">Activity</string>
    <string name="collector_fitness_info_stat_distance_written">Distance</string>
    <string name="collector_fitness_info_stat_calories_written">Calories</string>
    <string name="collector_polar_h10_name">Polar H10</string>
    <string name="collector_polar_h10_desc">Physiological signals with Polar H10</string>
    <string name="collector_polar_h10_info_device_id">Device ID</string>
    <string name="collector_polar_h10_info_status">Status</string>
    <string name="collector_polar_h10_info_battery">Battery</string>
    <string name="collector_polar_h10_info_name">Name</string>
    <string name="setting_survey_base_date_title">Base Date for Survey Scheduling</string>
    <string name="setting_survey_config_header">Configurations</string>
    <string name="setting_survey_config_text_empty">There is no survey.</string>
    <string name="setting_survey_config_button_add">Add Survey</string>
</resources>