<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_add_survey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_vert_padding"
        android:layout_gravity="bottom|end"
        android:text="@string/setting_survey_config_button_add"
        app:icon="@drawable/baseline_add_24"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_base_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/item_two_line_height"
            android:focusable="true"
            android:clickable="true"
            android:background="?selectableItemBackground">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_base_date_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/space_vert_padding"
                android:paddingLeft="@dimen/space_horiz_padding"
                android:text="@string/setting_survey_base_date_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/img_more"
                android:textAppearance="?attr/textAppearanceSubtitle1"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_base_date_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="This is message"
                android:alpha="0.60"
                android:paddingBottom="@dimen/space_vert_padding"
                android:paddingLeft="@dimen/space_horiz_padding"
                app:layout_constraintTop_toBottomOf="@id/txt_base_date_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/img_more"
                android:textAppearance="?attr/textAppearanceBody2"/>

            <ImageView
                android:id="@+id/img_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_chevron_right_24"
                app:tint="@color/color_on_surface"
                android:paddingRight="@dimen/space_horiz_padding"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/space_horiz_padding"
            android:paddingTop="@dimen/space_vert_padding"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
            android:text="@string/setting_survey_config_header"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_no_survey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/setting_survey_config_text_empty"
                android:textAppearance="?attr/textAppearanceSubtitle2"
                android:textColor="?attr/colorError"
                android:visibility="gone"
                tools:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
        </FrameLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

